// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetNode renders ExternalChangeset 1`] = `
<Fragment>
  <span
    className="changeset-spec-node__separator"
  />
  <ExternalChangesetNode
    campaignUpdates="[Subject]"
    history="[History]"
    isLightTheme={true}
    location="[Location path=/campaigns]"
    node={
      Object {
        "__typename": "ExternalChangeset",
      }
    }
    viewerCanAdminister={false}
  />
</Fragment>
`;

exports[`ChangesetNode renders HiddenExternalChangeset 1`] = `
<Fragment>
  <span
    className="changeset-spec-node__separator"
  />
  <HiddenExternalChangesetNode
    campaignUpdates="[Subject]"
    history="[History]"
    isLightTheme={true}
    location="[Location path=/campaigns]"
    node={
      Object {
        "__typename": "HiddenExternalChangeset",
      }
    }
    viewerCanAdminister={false}
  />
</Fragment>
`;
